# BLASBitDetection

./: .travis.yml  CMakeLists.txt  README.md
BLAS/: CMakeLists.txt  DDOT.F  IDAMAX.F
src/: main.F90
