cmake_minimum_required(VERSION 3.9)

project(DDOT_BLAS)
enable_language(Fortran)

set(SOURCES
DDOT.F)

if(USE_STATIC)
  add_library(${PROJECT_NAME}32-${LIBRARY_TYPE} STATIC ${SOURCES})
  add_library(${PROJECT_NAME}64-${LIBRARY_TYPE} STATIC ${SOURCES})
else()
  add_library(${PROJECT_NAME}32-${LIBRARY_TYPE} SHARED ${SOURCES})
  add_library(${PROJECT_NAME}64-${LIBRARY_TYPE} SHARED ${SOURCES})
endif()

set_target_properties(${PROJECT_NAME}32-${LIBRARY_TYPE} PROPERTIES COMPILE_FLAGS "-DIP=4")
set_target_properties(${PROJECT_NAME}32-${LIBRARY_TYPE} PROPERTIES OUTPUT_NAME ${PROJECT_NAME}32)

set_target_properties(${PROJECT_NAME}64-${LIBRARY_TYPE} PROPERTIES COMPILE_FLAGS "-DIP=8")
set_target_properties(${PROJECT_NAME}64-${LIBRARY_TYPE} PROPERTIES OUTPUT_NAME ${PROJECT_NAME}64)
